Fix the gradle build