@@ -1,25 +1,11 @@
-// fat jar:
-//  - gradle jar
-//  - java -jar build/libs/template-javafx-1.0.jar
-
-// normal jar:
-//  - gradle jlink
-//  - java --module-path `find ~/javafx-sdk* -type d -name lib` --add-modules
-//    javafx.controls,javafx.base,javafx.media,javafx.fxml,javafx.graphics,
-//    javafx.web,javafx.swing -jar ./build/libs/template-javafx-1.0.jar
-//
-// or
-//  - ./build/image/bin/template-javafx
-
-val fatJar = true
-
 group = "fi.utu.tech"
-version = "1.0"
+version = "2.0.0"
 
 plugins {
     java
+    kotlin("jvm") version "1.4.31"
+    id("org.openjfx.javafxplugin") version "0.0.9"
     id("org.beryx.jlink") version "2.23.5"
-    id("org.jetbrains.kotlin.jvm") version "1.4.31"
     application
 }
 
@@ -41,9 +27,13 @@ java {
     }
 }
 
+javafx {
+    version = "16"
+    modules = listOf("javafx.controls", "javafx.fxml", "javafx.graphics", "javafx.media", "javafx.web")
+}
+
 repositories {
     mavenCentral()
-    jcenter()
     maven("https://ftdev.utu.fi/maven2")
 }
 
@@ -55,32 +45,11 @@ dependencies {
     testImplementation("org.junit.jupiter", "junit-jupiter-params", "5.7.1")
     testImplementation("org.junit.platform", "junit-platform-commons", "1.7.1")
     testImplementation("net.jqwik", "jqwik", "1.5.0")
-
-    val jfxOptions = object {
-        val group = "org.openjfx"
-        val version = "15.0.1"
-        val fxModules = arrayListOf(
-          "javafx-base", "javafx-controls", "javafx-graphics",
-          "javafx-fxml", "javafx-media", "javafx-web"
-        )
-    }
-
-    jfxOptions.run {
-        val osName = System.getProperty("os.name")
-        val platform = when {
-            osName.startsWith("Mac", ignoreCase = true) -> "mac"
-            osName.startsWith("Windows", ignoreCase = true) -> "win"
-            osName.startsWith("Linux", ignoreCase = true) -> "linux"
-            else -> "mac"
-        }
-        fxModules.forEach {
-            implementation("$group:$it:$version:$platform")
-        }
-    }
 }
 
 application{
-    //mainModule.set("fi.utu.tech.gui.javafx")
+    modularity.disableEffectiveArgumentsAdjustment()
+    mainModule.set("fi.utu.tech.gui.javafx")
     mainClass.set("fi.utu.tech.gui.javafx.Main")
     applicationDefaultJvmArgs = arrayListOf("-ea")
 }
@@ -90,32 +59,14 @@ tasks {
         useJUnitPlatform()
     }
 
-    getByName<ProcessResources>("processResources") {
-            duplicatesStrategy = DuplicatesStrategy.INCLUDE // allow duplicates
-    }
-
-    getByName<Jar>("jar") {
-            doFirst {
-                manifest {
-                    attributes["Main-Class"] = application.mainClassName
-                }
-                if (fatJar) {
-                    from(configurations.getByName("runtimeClasspath").map {
-                        if (it.isDirectory) it else zipTree(it)
-                    })
-                }
-            }
-    }
-
     compileJava {
         options.encoding = "UTF-8"
     }
 }
 
-jlink {
-    jpackage {
-        jvmArgs = listOf("-ea")
-        outputDir = "apps"
-        imageName = "template-javafx"
+jlink{
+    launcher {
+        name = "launch"
     }
+    imageZip.set(project.file("${project.buildDir}/image-zip/template-javafx-image.zip"))
 }
